---
title: State class diagram
---
classDiagram
    class State{
      <<interface>>
      +onEnter(context)
      +onExit(context)
      +handle(context)
    }

    class Context{
      -state : State
      +transitionTo(state)
      +request()
    }

    State <-- Context
    State <|-- ConcreteStateA
    State <|-- ConcreteStateB
    State <|-- ConcreteStateC

    class ConcreteStateA{
      +onEnter(context)
      +onExit(context)
      +handle(context)
    }

    class ConcreteStateB{
      +onEnter(context)
      +onExit(context)
      +handle(context)
    }

    class ConcreteStateC{
      +onEnter(context)
      +onExit(context)
      +handle(context)
    }
